--- a/packages/atomic/src/components/insight/atomic-insight-result-template/atomic-insight-result-template.mdx
+++ b/packages/atomic/src/components/insight/atomic-insight-result-template/atomic-insight-result-template.mdx
@@ -1,5 +1,5 @@
 import { Meta } from '@storybook/addon-docs/blocks';
-import * as AtomicInsightInterfaceStories from '../../atomic-insight-interface/atomic-insight-interface.new.stories';
+import * as AtomicInsightInterfaceStories from '../atomic-insight-interface/atomic-insight-interface.new.stories';
 import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 <Meta title="Atomic/Insight/ResultTemplate" />
