--- a/packages/atomic/src/components/search/atomic-load-more-results/atomic-load-more-results.mdx
+++ b/packages/atomic/src/components/search/atomic-load-more-results/atomic-load-more-results.mdx
@@ -42,7 +42,7 @@ This component is typically placed within the "pagination" section of the layout
 ### Usage Notes
 
 - The Load More Results component is especially useful when you want your user to browse more results, rather than return to and refine facets or reconsider their query. 
-- Users browse longer than with Load more than with Pagination.
+- Users browse longer than with Load More than with Pagination.
 - Load More is less effective when the items in a source are highly specific or when they require comparison.
 
 ### Use Cases and Examples
