chore: migrate no results ux notes

--- a/packages/atomic/src/components/search/atomic-no-results/atomic-no-results.mdx
+++ b/packages/atomic/src/components/search/atomic-no-results/atomic-no-results.mdx
@@ -32,4 +32,17 @@ This component is typically placed within the results section of the search inte
 </atomic-search-interface>
 ```
 
+## UX best practices
+
+- Used when the query returns no results.
+- Displaying additional content from this component using a `<slot>` element is also possible.
+- The `<slot>` element acts as a placeholder inside the Atomic component, into which you can place your own markup to offer custom content such as messages, images, or links.
+- Use this opportunity to provide support to your users in the form of advice and tools for query reformulation.
+- If applicable, you should promote exploration and discovery using things like top searches, featured items, or popular items.
+
+### Use cases and examples
+
+When displaying a "no results" message on an ecommerce site, displaying popular products that relate to a selected category can help direct the user to a relevant result.
+It may also help increase sales.
+
 </AtomicDocTemplate>
