chore(atomic-search-box): migrating ux notes

--- a/packages/atomic/src/components/search/atomic-search-box/atomic-search-box.mdx
+++ b/packages/atomic/src/components/search/atomic-search-box/atomic-search-box.mdx
@@ -26,7 +26,7 @@ This component is typically placed within the "search" section of the layout.
 </atomic-search-interface>
 ```
 
-By default, [atomic-search-box-recent-queries](/docs/atomic-search-box-recent-queries--docs) and [atomic-search-box-query-suggestions](/docs/atomic-search-box-query-suggestions--docs) are enabled.  
+By default, [atomic-search-box-recent-queries](/docs/atomic-search-box-recent-queries--docs) and [atomic-search-box-query-suggestions](/docs/atomic-search-box-query-suggestions--docs) are enabled.
 You can include them inside the search box to customize their properties.
 
 To enable instant results, you must explicitly include the [atomic-search-box-instant-results](/docs/atomic-search-box-instant-results--docs) component inside the search box.
@@ -53,4 +53,11 @@ You can use the `atomic-search-box` as a standalone search box by setting the `r
 ```
 
 When a user submits a query in the standalone search box, they will be redirected to the URL specified in the `redirection-url` property with the query parameters appended.
+
+## UX Best Practices
+-  It's important to have it visible and clear to the user, best practices suggest that it should be in the top-center or upper-right section.
+
+## Reference
+[Search Best Practices Part 1 - The Search Box^](https://source.coveo.com/2017/09/06/search-best-practices-1/)
+[Search: Visible and Simple^](https://www.nngroup.com/articles/search-visible-and-simple/)
 </AtomicDocTemplate>
