--- a/packages/atomic/src/components/search/atomic-color-facet/atomic-color-facet.mdx
+++ b/packages/atomic/src/components/search/atomic-color-facet/atomic-color-facet.mdx
@@ -24,8 +24,7 @@ Place this component within the "facets" section of your search layout. For Dyna
     ...
     <atomic-layout-section section="facets">
       ...
-        <atomic-color-facet field="filetype" label="File Type"></atomic-color-facet>
-
+      <atomic-color-facet field="filetype" label="File Type"></atomic-color-facet>
     </atomic-layout-section>
   </atomic-search-layout>
 </atomic-search-interface>
@@ -74,5 +73,24 @@ You can customize the number of color boxes displayed per row using CSS custom p
   }
 </style>
 ```
+
+## UX Best Practices
+
+### Usage Notes
+- A color facet is best for placing emphasis on the visual aspect of a facet value. 
+- The two available options to display the facet values are `box` and `checkbox`. 
+-- The `box` display option will present the facet values in a grid with a larger tile format. 
+-- The `checkbox` display option will present the values in a list with a smaller icon or color tile.
+- When the facet doesn't have too many values to display and the text labels are short, it's best practice to use the `box` display option. 
+- When using an image instead of a color tile or icon, it's best practice to use the `box` display.
+
+### Use Cases and Examples
+
+In commerce, a user shopping for a t-shirt can select the colors they want using a color-faceted.
+
+## Reference
+
+[Don't Lose Face with Facets](https://source.coveo.com/2018/04/18/facets/)
+[Wayfair implementation of a visual facet](https://www.wayfair.com/furniture/sb0/bar-stools-counter-stools-c1767662.html)
 
 </AtomicDocTemplate>
