--- a/packages/atomic/src/components/search/atomic-category-facet/atomic-category-facet.mdx
+++ b/packages/atomic/src/components/search/atomic-category-facet/atomic-category-facet.mdx
@@ -74,4 +74,31 @@ searchInterface.i18n.addResourceBundle('en', 'translation', {
 });
 ```
 
+## UX Best Practices
+
+- A Category Facet requires a multi-value field whose values are formatted hierarchically.
+The facet will determine the filter to apply based on the current selected path of values. 
+This can offer a powerful navigational experience, quickly leading a user to relevant results. 
++
+This component uses `;` to separate individual values, and the character that's defined with the `delimiting-character` attribute to separate hierarchical levels within each value.
+Set this attribute to `|` instead of using the default, which is `;`.
+The following is an example of the recommended hierarchical formatting:
++
+`clothing; clothing|sale; clothing|sale|shoes; clothing|sale|shoes|kids; clothing|sale|shoes|kids|sneakers;`
+
+- It's only possible to select one value at a time in a category facet. 
+This is because they're meant to ease navigation through their hierarchically organized content, as opposed to applying multiple hierarchical filters.
+
+- It's best practice to have hierarchies at five levels or less in depth.
+
+### Use Cases and Examples
+
+On an ecommerce website, a user may want to start browsing by the category _Men_, and then narrow their results to _Bottoms_, then further to _Pants_, etc.
+Instead of selecting the facet value directly, this allows them to navigate hierarchically and determine the right starting point. // W: Glossary.Facet:A glossary entry exists for 'facet'. Use the glossary snippet instead.
+
+## References
+
+[Categories, Facets—and Browsable Facets?^](https://www.uxmatters.com/mt/archives/2011/08/categories-facetsand-browsable-facets.php)
+[Don't Lose Face with Facets^](https://source.coveo.com/2018/04/18/facets/)
+
 </AtomicDocTemplate>
