Refine UX best practices and remove examples
Removed redundant examples and clarified best practices.

--- a/packages/atomic/src/components/search/atomic-numeric-facet/atomic-numeric-facet.mdx
+++ b/packages/atomic/src/components/search/atomic-numeric-facet/atomic-numeric-facet.mdx
@@ -34,11 +34,7 @@ This component is typically placed within the "facets" section of the layout. It
 
 - Checkboxes let users select multiple values and are the most commonly used selection, being more visual and presenting more values in small spaces.
 - Links allow the user to select only one value at a time, behaving like a normal navigational link.
-
-
-### Use Cases and Examples
-
-In cases where the value has units, such as height, width, screen sizes, etc.
+- Best used in cases where the value has units, such as height, width, screen sizes, etc.
 
 ## Reference
 [Don't Lose Face with Facets](https://source.coveo.com/2018/04/18/facets/)
