--- a/packages/atomic/src/components/search/atomic-field-condition/atomic-field-condition.mdx
+++ b/packages/atomic/src/components/search/atomic-field-condition/atomic-field-condition.mdx
@@ -21,6 +21,33 @@ You can specify multiple `must-match-*` and `must-not-match-*` attributes, each 
 
 If you set both `must-match-*` and `must-not-match-*` for the same field with overlapping values, the condition will never be satisfied. Similarly, setting both `if-defined` and `if-not-defined` for the same field will make the condition impossible to satisfy.
 
+### Best practices
+
+- Kebab-case attribute names for camelCase result properties in `must-match-*` and `must-not-match-*`. For example, when targeting the `isRecommendation` property, use `must-match-is-recommendation`:
+
+```html
+<atomic-field-condition must-match-is-recommendation="true">
+  <!-- ... -->
+  <span class="recommendation">Recommended</span>
+</atomic-field-condition>
+```
+
+- Rendering behavior: The component initially renders itself and its children regardless of whether the condition is satisfied. If the condition is not met, it removes itself and its children from the DOM. Be mindful when nesting components that expect defined fields, as they may briefly render and then be removed, potentially logging warnings if a referenced field is undefined.
+
+```html
+<atomic-field-condition if-not-defined="thumbnailurl">
+  <atomic-result-icon class="icon"></atomic-result-icon>
+  <!-- Renders and stays when thumbnailurl is not defined -->
+  <!-- Nested component is safe here because it doesn't reference thumbnailurl -->
+  
+</atomic-field-condition>
+
+<atomic-field-condition if-defined="thumbnailurl">
+  <!-- This renders first and is removed if thumbnailurl is not defined, which can produce a console warning -->
+  <atomic-result-image field="thumbnailurl"></atomic-result-image>
+</atomic-field-condition>
+```
+
 ```html
 <atomic-result-template>
   <!-- Show only if author field exists -->
