chore(atomic-result-list): migrating ux notes

--- a/packages/atomic/src/components/search/atomic-result-list/atomic-result-list.mdx
+++ b/packages/atomic/src/components/search/atomic-result-list/atomic-result-list.mdx
@@ -66,4 +66,20 @@ When [displaying results as a table](https://docs.coveo.com/en/atomic/latest/usa
   </atomic-result-template>
 </atomic-result-list>
 ```
+
+
+
+## Use Cases and Examples
+
+The following table outlines the key differences and best use cases for grids, lists, and tables, helping you choose the most appropriate format based on your content and user needs.
+
+| Layout | Description |
+|--------|-------------|
+| Grid | Greater emphasis on images than text.  Helps users compare items visually.  Allows displaying more results.  Use when recent, high-quality images are available. |
+| List | Use when content or description is most important.  Helps users compare textually and scan content more easily.  Fewer results but reduced cognitive load, as text is heavier than images.  Use when image quality is uncertain. |
+| Table | Use when data is best presented in a tabular format. |
+
+
+## Reference
+[UI cheat sheet: list vs grid](https://uxdesign.cc/ui-cheat-sheet-list-vs-grids-48151a7262a7)
 </AtomicDocTemplate>
