chore(atomic-rating-facet): migrating ux notes (#6910)

--- a/packages/atomic/src/components/search/atomic-rating-facet/atomic-rating-facet.mdx
+++ b/packages/atomic/src/components/search/atomic-rating-facet/atomic-rating-facet.mdx
@@ -101,4 +101,16 @@ The custom icon should include `fill="currentColor"` to properly support active/
 - **[atomic-numeric-facet](/?path=/docs/search-numericfacet--docs)** - Numeric range facet
 - **[atomic-facet-manager](https://docs.coveo.com/en/2918)** - Dynamic facet management
 
+## UX Best Practices
+
+- Use the Rating Facet when social proof is important in guiding the user's decisions.
+- Ratings help users understand what others think, or how they have rated the item.
+- The Rating Facet only works with numeric field values.
+- Don't use a range that's too large, keep it below ten.
+- A five star rating system is ideal; this is a common system that's familiar to most people.
+
+### Use Cases and Examples
+
+On an ecommerce website, a user may want to filter their results to display only the items that have a rating of four stars or above.
+
 </AtomicDocTemplate>
