--- a/packages/atomic/src/components/insight/atomic-insight-result-template/atomic-insight-result-template.mdx
+++ b/packages/atomic/src/components/insight/atomic-insight-result-template/atomic-insight-result-template.mdx
@@ -12,7 +12,7 @@ import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-te
   className="AtomicInsightResultTemplate"
 >
 
-This component defines the UI display of your search results within an Insight interface.
+This component defines the UI display of your results within an Insight interface.
 A `template` element must be the child of an `atomic-insight-result-template`. Furthermore, an `atomic-insight-result-list` or `atomic-insight-folded-result-list` must be the parent of each `atomic-insight-result-template`.
 
 **Note:** Any `<script>` tags that are defined inside a `<template>` element will not be executed when the results are being rendered.
