--- a/packages/atomic/src/components/insight/atomic-insight-refine-toggle/atomic-insight-refine-toggle.mdx
+++ b/packages/atomic/src/components/insight/atomic-insight-refine-toggle/atomic-insight-refine-toggle.mdx
@@ -30,5 +30,5 @@ This component is typically placed within the layout of an Insight interface:
 
 ## Facet Management
 
-The refine modal will automatically include all facets defined in your insight interface. Facets can be placed anywhere in the interface, and they will be displayed in the modal when the toggle button is clicked.
+The refine modal will automatically include all facets defined in your insight interface. Facets can be placed normally in the interface, and they will be displayed in the modal when the toggle button is clicked.
 </AtomicDocTemplate>
