Update documentation for flattened headless-ssr nextjs sample (App router only)

--- a/packages/atomic/src/components/search/Introduction.mdx
+++ b/packages/atomic/src/components/search/Introduction.mdx
@@ -104,7 +104,6 @@ export const searchEngine = buildSearchEngine({
 ## Advanced Examples
 If you are looking to implement Coveo in a framework, you can find reference code in our GitHub repo:
 
-* [NextJS - Search (using App router)](https://github.com/coveo/ui-kit/tree/main/samples/atomic/search-nextjs-app-router)
-* [NextJS - Search (using Pages router)](https://github.com/coveo/ui-kit/tree/main/samples/atomic/search-nextjs-pages-router)
+* [NextJS - Search](https://github.com/coveo/ui-kit/tree/main/samples/atomic/search-nextjs-app-router)
 * [Stencil - Search](https://github.com/coveo/ui-kit/tree/main/samples/atomic/search-stencil)
 * [Vue - Search](https://github.com/coveo/ui-kit/tree/main/samples/atomic/search-vuejs)
