--- a/packages/atomic/src/components/insight/atomic-insight-numeric-facet/atomic-insight-numeric-facet.mdx
+++ b/packages/atomic/src/components/insight/atomic-insight-numeric-facet/atomic-insight-numeric-facet.mdx
@@ -1,8 +1,8 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicInsightNumericFacetStories from './atomic-insight-numeric-facet.new.stories';
-import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
 
-<Meta of={ AtomicInsightNumericFacetStories } />
+<Meta of={AtomicInsightNumericFacetStories} />
 
 <AtomicDocTemplate
   stories={ AtomicInsightNumericFacetStories }
@@ -13,7 +13,7 @@ import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-te
 
 This component displays numeric ranges as checkboxes or links for the Insight interface, commonly used for filtering by numeric fields such as view counts, ratings, or other quantifiable metrics.
 
-```html
+````html
 <atomic-insight-interface>
   ...
   <atomic-insight-layout>
@@ -30,7 +30,7 @@ This component displays numeric ranges as checkboxes or links for the Insight in
     </atomic-layout-section>
   </atomic-insight-layout>
 </atomic-insight-interface>
-```
+````
 
 ## UX Best Practices
 
