--- a/packages/atomic/src/components/ipx/atomic-ipx-embedded/atomic-ipx-embedded.mdx
+++ b/packages/atomic/src/components/ipx/atomic-ipx-embedded/atomic-ipx-embedded.mdx
@@ -8,7 +8,7 @@ import {AtomicDocTemplate} from '@/storybook-utils/documentation/atomic-doc-temp
   stories={AtomicIpxEmbeddedStories}
   githubPath="ipx/atomic-ipx-embedded/atomic-ipx-embedded.ts"
   tagName="atomic-ipx-embedded"
-  className="AtomicIPXEmbedded"
+  className="AtomicIpxEmbedded"
 >
 
 ## Usage
