chore(atomic): applying documentation text standards to atomic

--- a/packages/atomic/src/components/commerce/Introduction.mdx
+++ b/packages/atomic/src/components/commerce/Introduction.mdx
@@ -24,7 +24,7 @@ You can also find examples of full implementations below:
 These stories provide example usages of the Coveo Atomic web components for Commerce.
 Each of the components must be placed correctly within the component hierarchy in order to function.
 The top level of the tree must match the interface being initialized by the Headless engine.
-For example, most Coveo Commerce interfaces must start have `atomic-commerce-interface` at the top the component hierarchy.
+For example, most Coveo Commerce interfaces must have `atomic-commerce-interface` at the top of the component hierarchy.
 
 ### Initialization
 Here is an example of initializing a `atomic-commerce-interface`.
