--- a/packages/atomic/src/components/ipx/atomic-ipx-modal/atomic-ipx-modal.mdx
+++ b/packages/atomic/src/components/ipx/atomic-ipx-modal/atomic-ipx-modal.mdx
@@ -8,7 +8,7 @@ import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-te
   stories={AtomicIpxModalStories}
   githubPath="ipx/atomic-ipx-modal/atomic-ipx-modal.ts"
   tagName="atomic-ipx-modal"
-  className="AtomicIPXModal"
+  className="AtomicIpxModal"
   defaultStory="Default"
 >
 
