--- a/packages/atomic/src/components/ipx/atomic-ipx-embedded/atomic-ipx-embedded.mdx
+++ b/packages/atomic/src/components/ipx/atomic-ipx-embedded/atomic-ipx-embedded.mdx
@@ -1,6 +1,6 @@
-import {Meta} from '@storybook/addon-docs/blocks';
+import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicIpxEmbeddedStories from './atomic-ipx-embedded.new.stories';
-import {AtomicDocTemplate} from '@/storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 <Meta of={AtomicIpxEmbeddedStories} />
 
@@ -11,35 +11,61 @@ import {AtomicDocTemplate} from '@/storybook-utils/documentation/atomic-doc-temp
   className="AtomicIpxEmbedded"
 >
 
+## Overview
+
+The `atomic-ipx-embedded` component renders an In-Product Experience (IPX) search interface directly embedded within a page, as opposed to displaying it in a modal (`atomic-ipx-modal`). This is useful when you want the search experience to be a permanent, visible part of your application layout rather than a popup triggered by user action.
+
 ## Usage
 
-The `atomic-ipx-embedded` component is used to create embedded IPX (In-Product Experience) interfaces. It provides a container with three slot areas for header, body, and footer content.
+The component must be placed inside an `atomic-search-interface` and provides three named slots for organizing content:
 
 ```html
-<atomic-ipx-embedded>
-  <div slot="header">
-    <h2>Your Header</h2>
-  </div>
-  <div slot="body">
-    <p>Your main content goes here</p>
-  </div>
-  <div slot="footer">
-    <button>Action</button>
-  </div>
-</atomic-ipx-embedded>
+<atomic-search-interface>
+  <atomic-ipx-embedded>
+    <div slot="header">
+      <!-- Search box, tabs, and refine toggle -->
+      <atomic-layout-section section="search">
+        <atomic-search-box></atomic-search-box>
+        <atomic-ipx-refine-toggle></atomic-ipx-refine-toggle>
+        <atomic-ipx-tabs>
+          <atomic-ipx-tab label="All" expression="" active></atomic-ipx-tab>
+          <atomic-ipx-tab label="Articles" expression="@source==Knowledge"></atomic-ipx-tab>
+        </atomic-ipx-tabs>
+      </atomic-layout-section>
+    </div>
+    <div slot="body">
+      <!-- Query summary, results, and pagination -->
+      <atomic-layout-section section="status">
+        <atomic-query-summary></atomic-query-summary>
+        <atomic-did-you-mean></atomic-did-you-mean>
+      </atomic-layout-section>
+      <atomic-layout-section section="results">
+        <atomic-result-list></atomic-result-list>
+      </atomic-layout-section>
+      <atomic-layout-section section="pagination">
+        <atomic-load-more-results></atomic-load-more-results>
+      </atomic-layout-section>
+    </div>
+    <div slot="footer">
+      <!-- Footer links and branding -->
+      <a href="https://example.com">View full search</a>
+    </div>
+  </atomic-ipx-embedded>
+</atomic-search-interface>
 ```
 
-## Slots
+## Embedded vs Modal
 
-- **header**: Content to display in the header area
-- **body**: Main content area
-- **footer**: Footer content area (optional)
+Use `atomic-ipx-embedded` when:
+- The search interface should be persistently visible on the page
+- You want to embed search within a specific section or container
+- The search experience is a primary feature of the page
 
-## Features
+Use `atomic-ipx-modal` when:
+- Search should appear on demand via a button click
+- You want an overlay experience that doesn't take permanent page space
+- The search is a secondary feature accessed occasionally
 
-- Automatically detects if footer slot has content
-- Generates a unique ID if one is not provided
-- Supports responsive breakpoints
-- Integrates with `atomic-ipx-body` for consistent styling
+
 
 </AtomicDocTemplate>
