--- a/packages/atomic/src/components/insight/atomic-insight-result-children/atomic-insight-result-children.mdx
+++ b/packages/atomic/src/components/insight/atomic-insight-result-children/atomic-insight-result-children.mdx
@@ -12,9 +12,7 @@ import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-te
   className="AtomicInsightResultChildren"
 >
 
-The `atomic-insight-result-children` component is responsible for displaying child results by applying one or more child result templates within an Insight interface. It is used within `atomic-insight-folded-result-list` to render hierarchical result structures.
-
-This component includes two slots, `before-children` and `after-children`, which allow for rendering content before and after the list of children, only when children exist.
+This component is typically used within `atomic-insight-folded-result-list` to render hierarchical result structures.
 
 ```html
 <atomic-insight-result-template>
